--- a/demo.html
+++ b/demo.html
@@ -5,17 +5,15 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>ZenSite | Demos Profesionales</title>
 
-<!-- PREMIUM FONTS -->
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700;800&family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
 <style>
 :root{
   --bg:#050505;
   --glass:rgba(16,16,16,.85);
-  --line:rgba(255,255,255,.10);
+  --line:rgba(255,255,255,.12);
   --muted:rgba(255,255,255,.75);
   --muted2:rgba(255,255,255,.55);
-  --radius:28px;
 }
 
 *{margin:0;padding:0;box-sizing:border-box}
@@ -30,18 +28,15 @@ body{
 /* ===== HEADER ===== */
 .header{
   position:fixed;
-  top:0; left:0; right:0;
+  inset:0 0 auto 0;
   padding:18px 22px;
   display:flex;
   justify-content:space-between;
   align-items:center;
-  background:linear-gradient(to bottom,rgba(0,0,0,.9),rgba(0,0,0,.5),transparent);
+  background:linear-gradient(to bottom,rgba(0,0,0,.9),rgba(0,0,0,.4),transparent);
   z-index:1000;
 }
-.brand{
-  font-weight:900;
-  font-size:20px;
-}
+.brand{font-weight:900;font-size:20px}
 .langs span{
   margin-left:14px;
   cursor:pointer;
@@ -70,7 +65,7 @@ body{
 .slider{
   max-width:1200px;
   margin:90px auto 0;
-  border-radius:var(--radius);
+  border-radius:28px;
   overflow:hidden;
   border:1px solid var(--line);
   background:#000;
@@ -82,22 +77,21 @@ body{
 }
 .slide{
   min-width:100%;
-  background:#000;
   display:flex;
-  align-items:center;
   justify-content:center;
+  align-items:center;
 }
 .slide img{
   width:100%;
   height:500px;
-  object-fit:contain; /* 🔥 NO RECORTE */
+  object-fit:contain;
   background:#000;
 }
 
 /* ===== STATS ===== */
 .stats{
   max-width:1100px;
-  margin:120px auto 40px;
+  margin:120px auto 20px;
   padding:0 6%;
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
@@ -122,39 +116,73 @@ body{
   color:var(--muted2);
 }
 
-/* ===== DEMO BUTTONS ===== */
+/* ===== DEMO BUTTONS (BURBUJA PREMIUM) ===== */
 .demo-zone{
-  height:320px;
+  height:340px;
   display:flex;
   align-items:center;
   justify-content:center;
 }
+
 .demo-buttons{
   display:flex;
   flex-direction:column;
-  gap:16px;
+  gap:18px;
 }
+
 .demo-buttons a{
-  padding:16px 32px;
+  padding:18px 42px;
   border-radius:999px;
-  background:rgba(255,255,255,.08);
-  border:1px solid rgba(255,255,255,.22);
-  backdrop-filter:blur(18px);
+  background:rgba(255,255,255,.10);
+  border:1px solid rgba(255,255,255,.25);
+  backdrop-filter:blur(22px);
   color:#fff;
   font-weight:800;
+  letter-spacing:.5px;
   text-decoration:none;
-  transition:.28s ease;
+  text-align:center;
+
+  box-shadow:
+    0 0 0 rgba(255,255,255,0),
+    0 14px 34px rgba(0,0,0,.55);
+
+  animation:heartbeat 4.5s ease-in-out infinite;
+  transition:
+    transform .35s ease,
+    box-shadow .35s ease,
+    background .35s ease;
 }
+
+/* efecto corazón */
+@keyframes heartbeat{
+  0%,100%{transform:scale(1)}
+  50%{transform:scale(1.035)}
+}
+
+/* glow sutil */
+.demo-buttons a::after{
+  content:"";
+  position:absolute;
+  inset:-1px;
+  border-radius:999px;
+  background:radial-gradient(120px 60px at 50% 50%, rgba(255,255,255,.22), transparent 70%);
+  opacity:.35;
+  pointer-events:none;
+}
+
 .demo-buttons a:hover{
+  transform:scale(1.08);
   background:#fff;
   color:#000;
-  transform:scale(1.08);
+  box-shadow:
+    0 0 26px rgba(255,255,255,.35),
+    0 18px 50px rgba(0,0,0,.75);
 }
 
 /* ===== FINAL ===== */
 .final{
   max-width:1000px;
-  margin:130px auto 160px;
+  margin:140px auto 160px;
   padding:0 8%;
   text-align:center;
 }
@@ -180,7 +208,7 @@ footer{
 
 @media(max-width:600px){
   .slide img{height:380px}
-  .demo-zone{height:280px}
+  .demo-zone{height:300px}
 }
 </style>
 </head>
@@ -206,7 +234,6 @@ footer{
   </p>
 </section>
 
-<!-- SLIDER -->
 <div class="slider">
   <div class="track" id="track">
     <div class="slide"><img src="demo1.jpg"></div>
@@ -217,23 +244,12 @@ footer{
   </div>
 </div>
 
-<!-- STATS -->
-<div class="stats" id="stats">
-  <div class="stat">
-    <strong data-count="18">0</strong>
-    <span>Proyectos entregados</span>
-  </div>
-  <div class="stat">
-    <strong data-count="3">0</strong>
-    <span>Países</span>
-  </div>
-  <div class="stat">
-    <strong data-count="100">0</strong>
-    <span>Satisfacción</span>
-  </div>
+<div class="stats">
+  <div class="stat"><strong data-count="18">0</strong><span>Proyectos entregados</span></div>
+  <div class="stat"><strong data-count="3">0</strong><span>Países</span></div>
+  <div class="stat"><strong data-count="100">0</strong><span>Satisfacción</span></div>
 </div>
 
-<!-- DEMOS -->
 <div class="demo-zone">
   <div class="demo-buttons">
     <a href="https://olivahr.github.io/demohomepage-/" target="_blank">Home Page</a>
@@ -246,21 +262,17 @@ footer{
 <section class="final">
   <h2>Esto es solo una demostración</h2>
   <p>
-    Cada proyecto se diseña desde cero, completamente personalizado.
-    <br><br>
-    No usamos plantillas genéricas. Todo se desarrolla, instala y conecta correctamente:
-    dominio, hosting, formularios, pagos, optimización y escalabilidad.
-    <br><br>
+    Cada proyecto se diseña desde cero, completamente personalizado.<br><br>
+    No usamos plantillas genéricas. Todo se desarrolla, instala y conecta como debe ser:
+    dominio, hosting, formularios, pagos, optimización y escalabilidad.<br><br>
     El objetivo es representar la marca al más alto nivel y generar resultados reales.
   </p>
 </section>
 
-<footer>
-  © 2025 ZenSite · Desarrollo web premium
-</footer>
+<footer>© 2025 ZenSite · Desarrollo web premium</footer>
 
 <script>
-/* ===== SLIDER AUTO ===== */
+/* SLIDER */
 const track=document.getElementById("track");
 let i=0;
 setInterval(()=>{
@@ -268,7 +280,7 @@ setInterval(()=>{
   track.style.transform=`translateX(-${i*100}%)`;
 },5200);
 
-/* ===== COUNTERS (ON VIEW) ===== */
+/* COUNTERS */
 const counters=document.querySelectorAll("[data-count]");
 const observer=new IntersectionObserver(entries=>{
   entries.forEach(entry=>{
@@ -286,10 +298,9 @@ const observer=new IntersectionObserver(entries=>{
     }
   });
 },{threshold:.5});
-
 counters.forEach(c=>observer.observe(c));
 
-/* ===== LANG ===== */
+/* LANG */
 const btns=document.querySelectorAll(".langs span");
 const els=document.querySelectorAll("[data-es]");
 btns.forEach(b=>{
