--- a/demo.html
+++ b/demo.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ZenSite | Demos Profesionales</title>
+<title>ZenSite | Premium Demos</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700;800&family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
 <style>
 :root{
   --bg:#050505;
-  --glass:rgba(16,16,16,.85);
+  --glass:rgba(18,18,18,.88);
   --line:rgba(255,255,255,.12);
   --muted:rgba(255,255,255,.75);
   --muted2:rgba(255,255,255,.55);
@@ -25,18 +25,21 @@ body{
   overflow-x:hidden;
 }
 
-/* ===== HEADER ===== */
+/* ================= HEADER ================= */
 .header{
   position:fixed;
   inset:0 0 auto 0;
-  padding:18px 22px;
+  padding:18px 24px;
   display:flex;
   justify-content:space-between;
   align-items:center;
   background:linear-gradient(to bottom,rgba(0,0,0,.9),rgba(0,0,0,.4),transparent);
   z-index:1000;
 }
-.brand{font-weight:900;font-size:20px}
+.brand{
+  font-weight:900;
+  letter-spacing:.5px;
+}
 .langs span{
   margin-left:14px;
   cursor:pointer;
@@ -45,7 +48,7 @@ body{
 }
 .langs span.active{opacity:1}
 
-/* ===== HERO ===== */
+/* ================= HERO ================= */
 .hero{
   padding:160px 8% 120px;
 }
@@ -61,7 +64,7 @@ body{
   color:var(--muted);
 }
 
-/* ===== SLIDER ===== */
+/* ================= SLIDER ================= */
 .slider{
   max-width:1200px;
   margin:90px auto 0;
@@ -83,15 +86,15 @@ body{
 }
 .slide img{
   width:100%;
-  height:500px;
+  height:520px;
   object-fit:contain;
   background:#000;
 }
 
-/* ===== STATS ===== */
+/* ================= STATS ================= */
 .stats{
   max-width:1100px;
-  margin:120px auto 20px;
+  margin:120px auto 40px;
   padding:0 6%;
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
@@ -100,8 +103,8 @@ body{
 .stat{
   background:var(--glass);
   border:1px solid var(--line);
-  border-radius:24px;
-  padding:44px 18px;
+  border-radius:26px;
+  padding:48px 18px;
   text-align:center;
   backdrop-filter:blur(14px);
 }
@@ -116,70 +119,74 @@ body{
   color:var(--muted2);
 }
 
-/* ===== DEMO BUTTONS (BURBUJA PREMIUM) ===== */
+/* ================= DEMO ZONE ================= */
 .demo-zone{
-  height:340px;
+  height:360px;
   display:flex;
   align-items:center;
   justify-content:center;
 }
 
-.demo-buttons{
-  display:flex;
-  flex-direction:column;
-  gap:18px;
+/* ===== HEART BUTTON CLUSTER ===== */
+.demo-cluster{
+  position:relative;
+  width:320px;
+  height:320px;
+  display:grid;
+  place-items:center;
 }
 
-.demo-buttons a{
-  padding:18px 42px;
+.demo-btn{
+  position:absolute;
+  padding:20px 44px;
   border-radius:999px;
-  background:rgba(255,255,255,.10);
-  border:1px solid rgba(255,255,255,.25);
-  backdrop-filter:blur(22px);
+  background:rgba(255,255,255,.12);
+  border:1px solid rgba(255,255,255,.28);
+  backdrop-filter:blur(24px);
   color:#fff;
   font-weight:800;
   letter-spacing:.5px;
   text-decoration:none;
-  text-align:center;
-
   box-shadow:
     0 0 0 rgba(255,255,255,0),
-    0 14px 34px rgba(0,0,0,.55);
-
-  animation:heartbeat 4.5s ease-in-out infinite;
-  transition:
-    transform .35s ease,
-    box-shadow .35s ease,
-    background .35s ease;
+    0 18px 48px rgba(0,0,0,.6);
+  animation:heartBeat 3.6s ease-in-out infinite;
+  transition:transform .35s ease, box-shadow .35s ease, background .35s ease;
 }
 
-/* efecto corazón */
-@keyframes heartbeat{
-  0%,100%{transform:scale(1)}
-  50%{transform:scale(1.035)}
+/* posiciones circulares */
+.demo-btn.home{transform:translate(0,-120px); animation-delay:0s}
+.demo-btn.store{transform:translate(120px,0); animation-delay:.4s}
+.demo-btn.store2{transform:translate(0,120px); animation-delay:.8s}
+.demo-btn.web{transform:translate(-120px,0); animation-delay:1.2s}
+
+/* latido real */
+@keyframes heartBeat{
+  0%,100%{transform:scale(1) translate(var(--x,0),var(--y,0))}
+  50%{transform:scale(1.06) translate(var(--x,0),var(--y,0))}
 }
 
-/* glow sutil */
-.demo-buttons a::after{
+/* glow suave */
+.demo-btn::after{
   content:"";
   position:absolute;
-  inset:-1px;
+  inset:-2px;
   border-radius:999px;
-  background:radial-gradient(120px 60px at 50% 50%, rgba(255,255,255,.22), transparent 70%);
-  opacity:.35;
+  background:radial-gradient(120px 60px at 50% 50%, rgba(255,255,255,.35), transparent 70%);
+  opacity:.45;
   pointer-events:none;
 }
 
-.demo-buttons a:hover{
-  transform:scale(1.08);
+.demo-btn:hover{
   background:#fff;
   color:#000;
   box-shadow:
-    0 0 26px rgba(255,255,255,.35),
-    0 18px 50px rgba(0,0,0,.75);
+    0 0 32px rgba(255,255,255,.45),
+    0 22px 60px rgba(0,0,0,.8);
+  transform:scale(1.12) translate(var(--x,0),var(--y,0));
 }
 
-/* ===== FINAL ===== */
+/* ================= FINAL TEXT ================= */
 .final{
   max-width:1000px;
   margin:140px auto 160px;
@@ -194,10 +201,10 @@ body{
   margin-top:26px;
   font-size:17px;
   color:var(--muted);
-  line-height:1.8;
+  line-height:1.85;
 }
 
-/* ===== FOOTER ===== */
+/* ================= FOOTER ================= */
 footer{
   padding:44px 20px;
   text-align:center;
@@ -206,9 +213,11 @@ footer{
   border-top:1px solid var(--line);
 }
 
-@media(max-width:600px){
-  .slide img{height:380px}
+/* ================= MOBILE ================= */
+@media(max-width:640px){
+  .slide img{height:420px}
   .demo-zone{height:300px}
+  .demo-cluster{transform:scale(.9)}
 }
 </style>
 </head>
@@ -218,19 +227,16 @@ footer{
 <header class="header">
   <div class="brand">ZenSite</div>
   <div class="langs">
-    <span class="active" data-lang="es">ES</span>
-    <span data-lang="en">EN</span>
+    <span class="active">ES</span>
+    <span>EN</span>
   </div>
 </header>
 
 <section class="hero">
-  <h1 data-es="Demostraciones profesionales"
-      data-en="Professional demonstrations">
-    Demostraciones profesionales
-  </h1>
-  <p data-es="Ejemplos reales de sitios diseñados para negocios que buscan presencia, confianza y conversión."
-     data-en="Real examples of websites designed for businesses seeking presence, trust and conversion.">
-    Ejemplos reales de sitios diseñados para negocios que buscan presencia, confianza y conversión.
+  <h1>Demostraciones premium</h1>
+  <p>
+    Ejemplos reales de sitios diseñados para negocios que buscan presencia,
+    confianza y conversión a nivel profesional.
   </p>
 </section>
 
@@ -240,7 +246,6 @@ footer{
     <div class="slide"><img src="demo2.jpg"></div>
     <div class="slide"><img src="demo3.jpg"></div>
     <div class="slide"><img src="demo4.jpg"></div>
-    <div class="slide"><img src="demo5.jpg"></div>
   </div>
 </div>
 
@@ -251,21 +256,22 @@ footer{
 </div>
 
 <div class="demo-zone">
-  <div class="demo-buttons">
-    <a href="https://olivahr.github.io/demohomepage-/" target="_blank">Home Page</a>
-    <a href="https://olivahr.github.io/pruebamirandaflow/" target="_blank">Store</a>
-    <a href="https://olivahr.github.io/demostore/" target="_blank">Store 2</a>
-    <a href="https://olivahr.github.io/demobarberweb/" target="_blank">Web</a>
+  <div class="demo-cluster">
+    <a class="demo-btn home"  style="--x:0;--y:-120px" href="https://olivahr.github.io/demohomepage-/" target="_blank">Home Page</a>
+    <a class="demo-btn store" style="--x:120px;--y:0" href="https://olivahr.github.io/pruebamirandaflow/" target="_blank">Store</a>
+    <a class="demo-btn store2" style="--x:0;--y:120px" href="https://olivahr.github.io/demostore/" target="_blank">Store 2</a>
+    <a class="demo-btn web"   style="--x:-120px;--y:0" href="https://olivahr.github.io/demobarberweb/" target="_blank">Web</a>
   </div>
 </div>
 
 <section class="final">
   <h2>Esto es solo una demostración</h2>
   <p>
-    Cada proyecto se diseña desde cero, completamente personalizado.<br><br>
-    No usamos plantillas genéricas. Todo se desarrolla, instala y conecta como debe ser:
-    dominio, hosting, formularios, pagos, optimización y escalabilidad.<br><br>
-    El objetivo es representar la marca al más alto nivel y generar resultados reales.
+    Cada proyecto se desarrolla desde cero, completamente personalizado.<br><br>
+    Todo se instala, conecta y optimiza como debe ser: dominio, hosting,
+    formularios, pagos, automatizaciones y escalabilidad.<br><br>
+    No son plantillas. Son sistemas diseñados para representar la marca
+    al más alto nivel y generar resultados reales.
   </p>
 </section>
 
@@ -299,17 +305,6 @@ const observer=new IntersectionObserver(entries=>{
   });
 },{threshold:.5});
 counters.forEach(c=>observer.observe(c));
-
-/* LANG */
-const btns=document.querySelectorAll(".langs span");
-const els=document.querySelectorAll("[data-es]");
-btns.forEach(b=>{
-  b.onclick=()=>{
-    btns.forEach(x=>x.classList.remove("active"));
-    b.classList.add("active");
-    els.forEach(e=>e.textContent=e.dataset[b.dataset.lang]);
-  };
-});
 </script>
 
 </body>
