--- a/demo.html
+++ b/demo.html
@@ -3,21 +3,21 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ZenSite — Premium Demos</title>
+<title>ZenSite | Premium Demos</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800;900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700;800&family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
 <style>
 :root{
   --bg:#050505;
+  --glass:rgba(18,18,18,.88);
   --line:rgba(255,255,255,.12);
-  --glass:rgba(15,15,15,.75);
   --muted:rgba(255,255,255,.75);
   --muted2:rgba(255,255,255,.55);
-  --r:28px;
 }
 
 *{margin:0;padding:0;box-sizing:border-box}
+
 body{
   font-family:'Inter',system-ui;
   background:var(--bg);
@@ -25,170 +25,203 @@ body{
   overflow-x:hidden;
 }
 
-/* ===== HEADER ===== */
+/* ================= HEADER ================= */
 .header{
   position:fixed;
-  top:0; left:0; width:100%;
-  padding:18px 26px;
+  inset:0 0 auto 0;
+  padding:18px 24px;
   display:flex;
   justify-content:space-between;
   align-items:center;
-  background:linear-gradient(to bottom, rgba(0,0,0,.85), rgba(0,0,0,.35), transparent);
+  background:linear-gradient(to bottom,rgba(0,0,0,.9),rgba(0,0,0,.4),transparent);
   z-index:1000;
 }
-.header a{
-  color:#fff;
-  font-size:22px;
+.brand{
   font-weight:900;
-  text-decoration:none;
-  opacity:.85;
+  letter-spacing:.5px;
 }
 .langs span{
   margin-left:14px;
   cursor:pointer;
-  font-weight:900;
-  opacity:.5;
+  font-weight:800;
+  opacity:.45;
 }
 .langs span.active{opacity:1}
 
-/* ===== HERO ===== */
+/* ================= HERO ================= */
 .hero{
-  padding:140px 8% 90px;
+  padding:160px 8% 120px;
 }
 .hero h1{
-  font-size:clamp(46px,6vw,78px);
-  font-weight:900;
-  line-height:1.05;
+  font-family:'Playfair Display',serif;
+  font-size:clamp(44px,6vw,78px);
+  font-weight:800;
 }
 .hero p{
-  margin-top:18px;
-  max-width:820px;
+  margin-top:22px;
+  max-width:880px;
   font-size:18px;
   color:var(--muted);
 }
 
-/* ===== SLIDER ===== */
+/* ================= SLIDER ================= */
 .slider{
-  margin:70px auto 0;
   max-width:1200px;
-  border-radius:var(--r);
+  margin:90px auto 0;
+  border-radius:28px;
   overflow:hidden;
   border:1px solid var(--line);
   background:#000;
-  box-shadow:0 40px 120px rgba(0,0,0,.7);
+  box-shadow:0 30px 90px rgba(0,0,0,.7);
 }
 .track{
   display:flex;
-  transition:transform .6s cubic-bezier(.2,.9,.2,1);
+  transition:transform 1.2s cubic-bezier(.2,.9,.2,1);
 }
 .slide{
   min-width:100%;
-  position:relative;
+  display:flex;
+  justify-content:center;
+  align-items:center;
 }
 .slide img{
   width:100%;
-  height:clamp(360px,55vh,560px);
-  object-fit:contain; /* 🔥 NO RECORTE */
+  height:520px;
+  object-fit:contain;
   background:#000;
 }
 
-/* ===== STATS ===== */
+/* ================= STATS ================= */
 .stats{
-  margin:80px auto 0;
-  max-width:1000px;
+  max-width:1100px;
+  margin:120px auto 40px;
+  padding:0 6%;
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
-  gap:22px;
+  gap:24px;
 }
 .stat{
   background:var(--glass);
   border:1px solid var(--line);
-  border-radius:22px;
-  padding:34px 18px;
+  border-radius:26px;
+  padding:48px 18px;
   text-align:center;
   backdrop-filter:blur(14px);
 }
 .stat strong{
-  font-size:46px;
-  font-weight:900;
+  font-family:'Playfair Display',serif;
+  font-size:56px;
 }
 .stat span{
   display:block;
-  margin-top:6px;
+  margin-top:8px;
+  font-weight:700;
   color:var(--muted2);
-  font-weight:800;
 }
 
-/* ===== DEMO MESSAGE ===== */
-.demo-text{
-  margin:80px auto 40px;
-  max-width:900px;
-  text-align:center;
-  font-size:17px;
-  color:var(--muted);
-  line-height:1.6;
-}
-
-/* ===== FLOATING DEMO BUTTONS ===== */
-.demo-hub{
-  position:relative;
-  height:240px;
-  margin:60px auto 40px;
+/* ================= DEMO ZONE ================= */
+.demo-zone{
+  height:360px;
   display:flex;
   align-items:center;
   justify-content:center;
+  position:relative;
+}
+
+/* ================= FLOATING GLOW ================= */
+.demo-zone::before{
+  content:"";
+  position:absolute;
+  width:360px;
+  height:360px;
+  border-radius:50%;
+  background:radial-gradient(circle, rgba(255,255,255,.18), transparent 70%);
+  animation:slowRotate 28s linear infinite;
+  filter:blur(40px);
+}
+
+@keyframes slowRotate{
+  from{transform:rotate(0deg)}
+  to{transform:rotate(360deg)}
+}
+
+/* ================= BUTTON CLUSTER ================= */
+.demo-cluster{
+  position:relative;
+  width:320px;
+  height:320px;
+  display:grid;
+  place-items:center;
 }
 
 .demo-btn{
   position:absolute;
-  padding:18px 26px;
+  padding:20px 44px;
   border-radius:999px;
   background:rgba(255,255,255,.12);
-  border:1px solid rgba(255,255,255,.25);
-  backdrop-filter:blur(16px);
-  font-weight:900;
-  letter-spacing:.4px;
+  border:1px solid rgba(255,255,255,.28);
+  backdrop-filter:blur(24px);
   color:#fff;
+  font-weight:800;
+  letter-spacing:.5px;
   text-decoration:none;
-  box-shadow:0 0 28px rgba(255,255,255,.18);
-  animation:heartBeat 2.4s ease-in-out infinite;
-  transition:transform .35s ease, box-shadow .35s ease;
-}
-.demo-btn:hover{
-  box-shadow:0 0 45px rgba(255,255,255,.35);
+  box-shadow:0 18px 48px rgba(0,0,0,.6);
+  animation:heartBeat 4.2s ease-in-out infinite;
+  transition:transform .4s ease, box-shadow .4s ease, background .4s ease;
 }
 
-/* posiciones orgánicas */
-.demo-btn.home{
-  transform:translate(-20px,-130px) rotate(-1deg);
-}
-.demo-btn.store{
-  transform:translate(160px,-20px) rotate(1deg);
-}
-.demo-btn.store2{
-  transform:translate(30px,135px) rotate(-1.4deg);
-}
-.demo-btn.web{
-  transform:translate(-170px,25px) rotate(1.2deg);
-}
+/* posiciones dispersas */
+.demo-btn.home{transform:translate(0,-140px)}
+.demo-btn.store{transform:translate(150px,-10px)}
+.demo-btn.store2{transform:translate(-20px,140px)}
+.demo-btn.web{transform:translate(-150px,20px)}
 
-/* latido real */
 @keyframes heartBeat{
-  0%{transform:scale(1)}
-  15%{transform:scale(1.04)}
-  30%{transform:scale(1)}
-  45%{transform:scale(1.07)}
-  60%{transform:scale(1.02)}
-  100%{transform:scale(1)}
+  0%,100%{transform:scale(1) translate(var(--x,0),var(--y,0))}
+  50%{transform:scale(1.08) translate(var(--x,0),var(--y,0))}
 }
 
-/* ===== FOOTER ===== */
+.demo-btn::after{
+  content:"";
+  position:absolute;
+  inset:-4px;
+  border-radius:999px;
+  background:radial-gradient(140px 70px at 50% 50%, rgba(255,255,255,.35), transparent 70%);
+  opacity:.4;
+}
+
+.demo-btn:hover{
+  background:#fff;
+  color:#000;
+  box-shadow:0 0 32px rgba(255,255,255,.45),0 26px 70px rgba(0,0,0,.9);
+  transform:scale(1.14) translate(var(--x,0),var(--y,0));
+}
+
+/* ================= FINAL TEXT ================= */
+.final{
+  max-width:1000px;
+  margin:140px auto 160px;
+  padding:0 8%;
+  text-align:center;
+}
+.final h2{
+  font-family:'Playfair Display',serif;
+  font-size:clamp(34px,4.8vw,56px);
+}
+.final p{
+  margin-top:26px;
+  font-size:17px;
+  color:var(--muted);
+  line-height:1.85;
+}
+
+/* ================= FOOTER ================= */
 footer{
-  margin-top:90px;
-  padding:30px;
+  padding:44px 20px;
   text-align:center;
   font-size:13px;
   opacity:.55;
+  border-top:1px solid var(--line);
 }
 </style>
 </head>
@@ -196,7 +229,7 @@ footer{
 <body>
 
 <header class="header">
-  <a href="#">ZenSite</a>
+  <div class="brand">ZenSite</div>
   <div class="langs">
     <span class="active">ES</span>
     <span>EN</span>
@@ -204,61 +237,99 @@ footer{
 </header>
 
 <section class="hero">
-  <h1>Demostraciones Premium</h1>
+  <h1>Demostraciones premium</h1>
   <p>
-    Ejemplos reales de home pages, sitios web y tiendas online creadas con estándares
-    profesionales, alto rendimiento y diseño de lujo.
+    Ejemplos reales de sitios diseñados para negocios que buscan presencia,
+    confianza y conversión a nivel profesional.
   </p>
+</section>
 
-  <!-- SLIDER -->
-  <div class="slider">
-    <div class="track">
-      <div class="slide"><img src="demo1.jpg"></div>
-      <div class="slide"><img src="demo2.jpg"></div>
-      <div class="slide"><img src="demo3.jpg"></div>
-      <div class="slide"><img src="demo4.jpg"></div>
-    </div>
+<div class="slider">
+  <div class="track" id="track">
+    <div class="slide"><img src="demo1.jpg"></div>
+    <div class="slide"><img src="demo2.jpg"></div>
+    <div class="slide"><img src="demo3.jpg"></div>
+    <div class="slide"><img src="demo4.jpg"></div>
   </div>
+</div>
 
-  <!-- STATS -->
-  <div class="stats">
-    <div class="stat"><strong data-count="18">0</strong><span>Proyectos entregados</span></div>
-    <div class="stat"><strong data-count="3">0</strong><span>Países</span></div>
-    <div class="stat"><strong data-count="98">0</strong><span>Satisfacción</span></div>
-  </div>
+<div class="stats">
+  <div class="stat"><strong data-count="18">0</strong><span>Proyectos entregados</span></div>
+  <div class="stat"><strong data-count="3">0</strong><span>Países</span></div>
+  <div class="stat"><strong data-count="100">0</strong><span>Satisfacción</span></div>
+</div>
 
-  <!-- DEMO MESSAGE -->
-  <div class="demo-text">
-    Estas páginas son <strong>demostraciones visuales</strong>.  
-    Cada proyecto se diseña <strong>desde cero</strong>, se personaliza completamente
-    y se instala correctamente en dominio, hosting y sistemas reales
-    según las necesidades del cliente.
-  </div>
-
-  <!-- DEMO HUB -->
-  <div class="demo-hub">
+<div class="demo-zone">
+  <div class="demo-cluster">
     <a class="demo-btn home" href="https://olivahr.github.io/demohomepage-/" target="_blank">Home Page</a>
     <a class="demo-btn store" href="https://olivahr.github.io/pruebamirandaflow/" target="_blank">Store</a>
     <a class="demo-btn store2" href="https://olivahr.github.io/demostore/" target="_blank">Store 2</a>
     <a class="demo-btn web" href="https://olivahr.github.io/demobarberweb/" target="_blank">Web</a>
   </div>
+</div>
 
+<section class="final">
+  <h2>Esto es solo una demostración</h2>
+  <p>
+    Cada proyecto se desarrolla desde cero, completamente personalizado.<br><br>
+    Todo se instala y se conecta como debe ser: dominio, hosting,
+    formularios, pagos, automatizaciones y escalabilidad.<br><br>
+    No son plantillas. Son sistemas diseñados para representar marcas
+    de alto nivel y generar resultados reales.
+  </p>
 </section>
 
-<footer>
-  © 2025 ZenSite · Diseño, desarrollo e implementación profesional
-</footer>
+<footer>© 2025 ZenSite · Desarrollo web premium</footer>
 
 <script>
-/* ===== CONTADORES ===== */
-document.querySelectorAll('[data-count]').forEach(el=>{
-  let target=+el.dataset.count, n=0;
-  let step=Math.max(1,Math.floor(target/40));
-  let t=setInterval(()=>{
-    n+=step;
-    if(n>=target){n=target;clearInterval(t);}
-    el.textContent=n;
-  },28);
+/* SLIDER */
+const track=document.getElementById("track");
+let i=0;
+setInterval(()=>{
+  i=(i+1)%track.children.length;
+  track.style.transform=`translateX(-${i*100}%)`;
+},6200);
+
+/* COUNTERS */
+const counters=document.querySelectorAll("[data-count]");
+const observer=new IntersectionObserver(entries=>{
+  entries.forEach(entry=>{
+    if(entry.isIntersecting){
+      const el=entry.target;
+      const target=+el.dataset.count;
+      let n=0;
+      const inc=Math.max(1,Math.floor(target/40));
+      const t=setInterval(()=>{
+        n+=inc;
+        if(n>=target){n=target;clearInterval(t)}
+        el.textContent=n;
+      },28);
+      observer.unobserve(el);
+    }
+  });
+},{threshold:.5});
+counters.forEach(c=>observer.observe(c));
+
+/* SONIDO PREMIUM */
+const AudioCtx=window.AudioContext||window.webkitAudioContext;
+const audioCtx=new AudioCtx();
+function playClickSound(){
+  const osc=audioCtx.createOscillator();
+  const gain=audioCtx.createGain();
+  osc.type="sine";
+  osc.frequency.value=880;
+  gain.gain.value=0.04;
+  osc.connect(gain);
+  gain.connect(audioCtx.destination);
+  osc.start();
+  gain.gain.exponentialRampToValueAtTime(0.0001,audioCtx.currentTime+.12);
+  osc.stop(audioCtx.currentTime+.12);
+}
+document.querySelectorAll(".demo-btn").forEach(btn=>{
+  btn.addEventListener("click",()=>{
+    if(audioCtx.state==="suspended") audioCtx.resume();
+    playClickSound();
+  });
 });
 </script>
 
